@@ -43,11 +43,11 @@
     <xi:include href="xml/histograms_lut.xml"/>
     <xi:include href="xml/inplace.xml"/>
     <xi:include href="xml/mask.xml"/>
+    <xi:include href="xml/morphology.xml"/>
   </chapter>
 
   <chapter>
     <title>VIPS operation API by section (no gtkdoc comments yet)</title>
-    <xi:include href="xml/morphology.xml"/>
     <xi:include href="xml/resample.xml"/>
     <xi:include href="xml/mosaicing.xml"/>
     <xi:include href="xml/other.xml"/>
